<resources>
    <string name="app_name">Coders Mail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kapil Chaulagai</string>
    <string name="nav_header_subtitle">kaps.explorer@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_archive">Archive</string>
    <string name="action_exit">Exit</string>

    <string name="menu_home">Home</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_outbox">Outbox</string>
    <string name="menu_sentbox">Sentbox</string>
    <string name="menu_draft">Draft</string>
    <string name="menu_trash">Trash</string>
    <string name="menu_photos">Photos</string>
    <string name="menu_documents">Documents</string>

</resources>