<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_menu_inbox"
            android:title="@string/menu_inbox" />
        <item
            android:id="@+id/nav_outbox"
            android:icon="@drawable/ic_menu_outbox"
            android:title="@string/menu_outbox" />

        <item
            android:id="@+id/nav_sentbox"
            android:icon="@drawable/ic_menu_sentbox"
            android:title="@string/menu_sentbox" />

        <item
            android:id="@+id/nav_draft"
            android:icon="@drawable/ic_menu_draft"
            android:title="@string/menu_draft" />

        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_menu_trash"
            android:title="@string/menu_trash" />
    </group>
    <item android:title="Drive">
        <menu>
            <item
                android:id="@+id/nav_photos"
                android:icon="@drawable/ic_menu_photos"
                android:title="Photos"/>

            <item
                android:id="@+id/nav_documents"
                android:icon="@drawable/ic_menu_documents"
                android:title="Documents"/>

        </menu>
    </item>
</menu>